--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-server": "^19.0.4",
     "@angular/router": "^19.0.4",
     "@angular/ssr": "^19.0.5",
+    "@primeng/themes": "^19.0.2",
     "express": "^4.18.2",
     "hire-ryan-client": "file:",
+    "primeng": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
