--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@primeng/themes": "^19.0.2",
     "express": "^4.18.2",
     "hire-ryan-client": "file:",
+    "ngx-cookie-service": "^19.0.0",
     "primeng": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
