--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "hire-ryan-client": "file:",
     "ngx-cookie-service": "^19.0.0",
+    "ngx-extended-pdf-viewer": "^22.2.0-alpha.5",
     "primeng": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.5",
+    "@angular-devkit/core": "^19.0.6",
     "@angular/cli": "^19.0.5",
     "@angular/compiler-cli": "^19.0.4",
     "@types/express": "^4.17.17",
